<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arka_plan"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tek_oyuncu"
        android:id="@+id/btn_tek_oyuncu"
        android:textSize="20sp"
        android:layout_above="@id/layout_zorluk"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Holo.Button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_zorluk"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_kolay"
            android:text="@string/kolay"
            android:textSize="20sp"
            style="@android:style/Widget.Holo.Button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_normal"
            android:text="@string/normal"
            android:textSize="20sp"
            style="@android:style/Widget.Holo.Button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_zor"
            android:text="@string/zor"
            android:textSize="20sp"
            style="@android:style/Widget.Holo.Button" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iki_oyuncu"
        android:id="@+id/btn_iki_oyuncu"
        android:textSize="20sp"
        android:layout_below="@id/layout_zorluk"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Holo.Button" />

 </RelativeLayout>